@@ -20,9 +20,11 @@
  */
 
 let cbor;
+let borc;
 
 try {
-    cbor = require( 'borc' );
+    cbor = require( 'cbor' );
+    borc = require( 'borc' );
 } catch ( _ ) {
     // pass
 }
@@ -49,14 +51,17 @@ class CBORCoder extends MessageCoder {
     }
 
     encode( msg ) {
+        // NOTE: benchmark shows borc is faster over cbor in encoding
+
         // TODO: optimize
         return Buffer.concat( [
             Buffer.from( CODER_NAME ),
-            cbor.encode( msg ),
+            borc.encode( msg ),
         ] );
     }
 
     decode( buffer ) {
+        // NOTE: benchmark shows cobr is faster over borc in decoding
         return cbor.decode( buffer.slice( 4 ) );
     }
 
