@@ -68,6 +68,7 @@
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "benchmark": "^2.1.4",
+    "cbor": "^4.0.0",
     "chai": "^4.1.2",
     "eslint": "^4.19.1",
     "futoin-asyncsteps": "^1.11.4",
